# photo-tagger

./: .gitignore  AGENTS.md  CLAUDE.md  Photo-Tagger Documentation.md  Photo-Tagger Refactor.md  README.md  codex_notes.md  config.yaml  initial_setup.md  known_issues.md  package-lock.json  pyproject.toml  reset-tagger-env.sh  runtagger.sh  start-all.sh  start-tagger.sh  tasks_2025-10-16.md
app/: __init__.py  cluster.py  config.py  embed.py  heuristics.py  jobs.py  main.py  openai_vision.py  person.py  proxy.py  scanner.py  store.py  tag_ai.py  tag_ck.py  ui.py  utils.py  write_xmp.py
app/cli/: tagger.py
app/core/: clip_model.py  enhanced_config.py  export.py  gallery_state.py  label_pack.py  labels.py  medoid.py  scan.py  score.py  tag_enhanced.py  tag_enhanced_v2.py  (+1 more)
config/: ck_vocab.example.yaml  config.example.yaml  enhanced_tagging.yaml
docs/: Photo-Tagger Documentation.md  enhanced_frontend.md  enhanced_tagging.md  known_issues.md  label_pack_manifest.md  medoids.md  metrics.md  mvp_recovery_checks.md  ongoing.md  pendind_evaluation_CODEX.md  project_map.md  qa_process_README.md  raw_ingestion_notes.md  recovery_and_error_handling.md  tag_management_system.md  tags-bulk-promotion.md  tags_page_qa_checklist.md  tags_page_qa_findings.md  tasks_finished.md  ui-refactor.md  user_guide.md
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
labels/: README.md  candidates.txt  colors.txt  equivalences.yaml  human-traits.txt  label_pack.yaml  locations.txt  objects.txt  prompts.yaml  scenes.txt  styles.txt  thresholds.yaml
scripts/: capture_screenshots.py  create_test_fixture.py  devshell.sh  generate_screenshots.py  medoid_batch.py  prepare_tag_brief.py  rebuild_env.sh  run_gallery_screenshots.sh  run_medoids.py  run_summary_helper.py  setup_enhanced_tagging.py  smoke_test.py  tune_medoids.py
tests/: conftest.py  mock_layout.py  test_backend_medoid_map.py  test_enhanced_tagging.py  test_gallery_api.py  test_heuristics.py  test_label_pack_manifest.py  test_medoid.py  test_review_table.py  test_scanner.py  test_thumb_prefetch.py  test_thumbs.py  test_utils.py  test_write_xmp.py
(+78 files in other folders)
